   - Explicitly specify utf8 for external html viewing, so browser can
     handle it correctly.
   - Cleanly handle early exits from message composition as well as
     while composing.
   - Add a hook `mu4e-mark-execute-pre-hook`, which is run just before
     executing marks.
   - Remove the 'z' keybinding for leaving the headers
     view. Keybindings are precious!
   - Make `shr' the default renderer for rich-text emails
   - Allow for resending existing messages, possibly editing them. M-x
     mu4e-compose-resend, or use the menu; no shortcut.
   - Let `mu4e~read-char-choice' become case-insensitive if there is
     no exact match; small convenience that affects most the
     single-char option reading in mu4e.
   - Now, just before executing any search, a hook-function
     `mu4e-headers-search-hook` is invoked, which receives the
     search expression as its parameter.
   - In addition there's a `mu4e-headers-search-bookmark-hook` which
     gets called when searches get invoked as a bookmark (note that
     `mu4e-headers-search-hook` will also be called just
     afterwards). This hook also receives the search expression as its
     parameter.
   - Better handle the closing of separate compose frames
   - Make org-links (and more general, all users of
     mu4e-view-message-with-message-id) use a headers buffer, then
     view the message. This way, those linked message are just like
     any other, and can be deleted, moved etc.
             
** 0.9.16

*** Release

    2016-01-20: Release from the 0.9.15 series

*** Contributors:

     Adam Sampson, Ævar Arnfjörð Bjarmason, Bar Shirtcliff,
     Charles-H. Schulz, Clément Pit--Claudel, Damien Cassou, Declan
     Qian, Dima Kogan, Dirk-Jan C. Binnema, Foivos S. Zakkak, Hinrik
     Örn Sigurðsson, Jeroen Tiebout, JJ Asghar, Jonas Bernoulli, Jun
     Hao, Martin Yrjölä, Maximilian Matthé, Piotr Trojanek, prsarv,
     Thierry Volpiatto, Titus von der Malsburg
